# esgi_ml_2024

./: .gitignore  README.md
App/App/: settings.py
Library Tests/tests/: regression.py
Test Project/: c_con.py  main.py  test_model.txt
Test Project/tests/: classification.py
Train/: .gitignore  load_dataset.py  main.py  train_model.py
Train and Tests/: .gitignore  c_con.py  main.py  test_model.py  train_model.py
lib-src/: .gitignore  CMakeLists.txt  library.h  main.cpp
lib-src/Models/: Linear.cpp  Linear.hpp  MLP.cpp  MLP.hpp
lib-src/include/: ext.h
lib-src/src/: ext.cpp  main.cpp  ranges.cpp  ranges.hpp
lib-src/src/Models/: Linear.cpp  Linear.hpp  MLP.cpp  MLP.hpp  RBF.cpp  RBF.hpp
scrape/: .gitignore  genre_analysis.py  genre_fusing.py  image.py  main.py  movies.csv  resize.py
